--- a/Extended/test.ipynb
+++ b/Extended/test.ipynb
@@ -81,22 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
-    "list_conditions"
+    "list_conditions = 'abacara'\n",
+    "print(list_conditions[1:1:1])"
    ]
   },
   {
@@ -176,22 +174,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def lengthOfLongestSubstring( s):\n",
+    "    seen = {}\n",
+    "    l = 0\n",
+    "    length = 0\n",
+    "    for r in range(len(s)):\n",
+    "        char = s[r]\n",
+    "        print(char)\n",
+    "\n",
+    "        if char in seen and seen[char] >= l:\n",
+    "            l = seen[char] + 1\n",
+    "            print(length)\n",
+    "        else:\n",
+    "            length = max(length, r - l +1 )\n",
+    "            print(length)\n",
+    "\n",
+    "        seen[char] = r\n",
+    "\n",
+    "    return length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "1\n",
+      "b\n",
+      "1\n",
+      "b\n",
+      "1\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3669"
+       "1"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "669+(3*10**3)"
+    "obj = lengthOfLongestSubstring(\"bbb\")\n",
+    "obj"
    ]
   }
  ],
@@ -211,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16 (main, Mar  8 2023, 10:39:24) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
