--- a/Extended/test.ipynb
+++ b/Extended/test.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,10 +189,14 @@
     "\n",
     "        if char in seen and seen[char] >= l:\n",
     "            l = seen[char] + 1\n",
-    "            print(length)\n",
+    "            print(\"l :\",l)\n",
+    "            print(\"length :\",length)\n",
+    "\n",
     "        else:\n",
     "            length = max(length, r - l +1 )\n",
-    "            print(length)\n",
+    "            print(\"length :\",length)\n",
+    "            print(\"l :\",l)\n",
+    "\n",
     "\n",
     "        seen[char] = r\n",
     "\n",
@@ -201,35 +205,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b\n",
-      "1\n",
-      "b\n",
-      "1\n",
-      "b\n",
-      "1\n"
+      "p\n",
+      "length : 1\n",
+      "l : 0\n",
+      "w\n",
+      "length : 2\n",
+      "l : 0\n",
+      "w\n",
+      "l : 2\n",
+      "length : 2\n",
+      "k\n",
+      "length : 2\n",
+      "l : 2\n",
+      "e\n",
+      "length : 3\n",
+      "l : 2\n",
+      "w\n",
+      "l : 3\n",
+      "length : 3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1"
+       "'ww'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj = lengthOfLongestSubstring(\"bbb\")\n",
-    "obj"
+    "obj = lengthOfLongestSubstring(\"pwwkew\")\n",
+    "obj\n",
+    "a = \"pwwkew\"\n",
+    "a[1:3]"
    ]
   }
  ],
