--- a/Extended/test.ipynb
+++ b/Extended/test.ipynb
@@ -49,6 +49,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aacc\n",
+      "accc\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"aacc\"\n",
+    "t = \"ccac\"\n",
+    "s= \"\".join(sorted(s))\n",
+    "t= \"\".join(sorted(t))\n",
+    "print(s)\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
