--- a/Extended/test.ipynb
+++ b/Extended/test.ipynb
@@ -72,6 +72,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
@@ -271,6 +278,149 @@
     "obj\n",
     "a = \"pwwkew\"\n",
     "a[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
+    "arr = {}\n",
+    "\n",
+    "end = 0\n",
+    "while end < (len(strs)):\n",
+    "    arr_temp =[]\n",
+    "    string = \"\".join(sorted(strs[end]))\n",
+    "    if string not in arr :\n",
+    "         arr_temp.append(strs[end])\n",
+    "         arr[string] =  arr_temp\n",
+    "    else:\n",
+    "         arr_temp.append(strs[end])\n",
+    "         arr[string] +=  arr_temp\n",
+    "    end += 1 \n",
+    "arr= list( arr.values())\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ALFRED', 'TABITHA', 'WILLIAM', 'ARLA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_pets = ['Alfred', 'Tabitha', 'William', 'Arla']\n",
+    "uppered_pets =   list(map(   str.upper, my_pets))\n",
+    "print(uppered_pets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n",
+      "81\n"
+     ]
+    }
+   ],
+   "source": [
+    "ada = [1,2,3,4,5]\n",
+    "a = map(lambda x : x*2, ada)\n",
+    "a = list(a)\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "power = lambda x,y : pow(x,y)\n",
+    "print(power(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1400\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [\n",
+    "    {\"item\": \"Laptop\", \"price\": 800},\n",
+    "    {\"item\": \"Phone\", \"price\": 500},\n",
+    "    {\"item\": \"Headphones\", \"price\": 100}\n",
+    "]\n",
+    "\n",
+    "total_price  =  lambda item : sum(item['price'] for item in items)\n",
+    "print(total_price(items))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, -2, 3, -4, 5, -6, 7, -8, 9, -10]\n",
+    "positive_numbers = filter(lambda x : x> 0, numbers)\n",
+    "print(list(positive_numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
+    "map = defaultdict(list)\n",
+    "\n",
+    "for  str in strs:\n",
+    "    str_sorted = ''.join(sorted(str))\n",
+    "    map[str_sorted].append(str)\n",
+    "print(list(map.values()))"
    ]
   }
  ],
