--- a/Extended/test.ipynb
+++ b/Extended/test.ipynb
@@ -49,6 +49,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -421,6 +428,170 @@
     "    str_sorted = ''.join(sorted(str))\n",
     "    map[str_sorted].append(str)\n",
     "print(list(map.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "process 1 :  numbers of  cont_id 1245565\n",
+      "process 1 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 2 :  numbers of  cont_id 1245565\n",
+      "process 2 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 3 :  numbers of  cont_id 1245565\n",
+      "process 3 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 4 :  numbers of  cont_id 1245565\n",
+      "process 4 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 5 :  numbers of  cont_id 1245565\n",
+      "process 5 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 6 :  numbers of  cont_id 1245565\n",
+      "process 6 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 7 :  numbers of  cont_id 1245565\n",
+      "process 7 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 8 :  numbers of  cont_id 1245565\n",
+      "process 8 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 9 :  numbers of  cont_id 1245565\n",
+      "process 9 :  numbers of  cont_id 1245565 Finisihed\n",
+      "process 10 : numbers of  cont_id 4\n",
+      "process 10 :  numbers of  cont_id 4 Finisihed\n",
+      "finished 100%\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_part =10\n",
+    "num_of_rows =12455654\n",
+    "aa = num_of_rows // 10\n",
+    "aa_mod = num_of_rows % 10\n",
+    "for i in range(10):\n",
+    "    i += 1\n",
+    "    if i != num_part and i ==1:\n",
+    "        print(\"process {} :  numbers of  cont_id {}\".format(i, aa))\n",
+    "        df_partisi =  df.limit(aa).\n",
+    "        print(\"process {} :  numbers of  cont_id {} Finisihed\".format(i, aa))\n",
+    "    elif i != num_part and i !=1:\n",
+    "        print(\"process {} :  numbers of  cont_id {}\".format(i, aa))\n",
+    "        df_partisi =  df.limit(aa).\n",
+    "        print(\"process {} :  numbers of  cont_id {} Finisihed\".format(i, aa))\n",
+    "    else:\n",
+    "        print(\"process {} : numbers of  cont_id {}\".format(i,aa_mod))\n",
+    "        print(\"process {} :  numbers of  cont_id {} Finisihed\".format(i, aa_mod))\n",
+    "\n",
+    "\n",
+    "print(\"finished 100%\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " with cte as (\n",
+      "      select  cont_id from a where row_number between 1 and 10)\n",
+      "\n",
+      "    select * from final  a\n",
+      "    inner join cte  b \n",
+      "     on a.cont_id = b.cont_id\n",
+      "     join idaaa\n",
+      "     join aa\n",
+      "    \n",
+      "    \n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'write' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[44], line 30\u001b[0m\n\u001b[0;32m     28\u001b[0m      query \u001b[39m=\u001b[39m query_raw(start,end)\n\u001b[0;32m     29\u001b[0m      \u001b[39mprint\u001b[39m(query)\n\u001b[1;32m---> 30\u001b[0m      write\n\u001b[0;32m     31\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'write' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "partition_size = 10\n",
+    "total_rows = 100\n",
+    "def query_raw (start, end):\n",
+    "    a = \"\"\" with cte as (\n",
+    "      select  cont_id from a where row_number between {} and {})\n",
+    "\n",
+    "    select * from final  a\n",
+    "    inner join cte  b \n",
+    "     on a.cont_id = b.cont_id\n",
+    "     join idaaa\n",
+    "     join aa\n",
+    "    \n",
+    "    \"\"\".format(start,end)\n",
+    "   \n",
+    "    return a\n",
+    "i =0\n",
+    "while i < total_rows:\n",
+    "    # Calculate the start and end row number for the current partition\n",
+    "   if i == 10:\n",
+    "        start  = i\n",
+    "        end  = i+10\n",
+    "        query = query_raw(start,end)\n",
+    "        print(query)\n",
+    "        write \n",
+    "   else :\n",
+    "        start  = i+1\n",
+    "        end  = i+10\n",
+    "        query = query_raw(start,end)\n",
+    "        print(query)\n",
+    "        write\n",
+    "   i += 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=  '{['\n",
+    "stack = []\n",
+    "pair_hash_map = {\"(\": \")\", \"{\":\"}\",\"[\":\"]\"}\n",
+    "for char in   string:\n",
+    "    if   char in pair_hash_map:\n",
+    "        stack.append(char)\n",
+    "    elif len(stack) == 0 or pair_hash_map[stack.pop()] != char:\n",
+    "        return False\n",
+    "return  len(stack) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string=  '}'\n",
+    "stack = []\n",
+    "pair_hash_map = {\"(\": \")\", \"{\":\"}\",\"[\":\"]\"}\n",
+    " \n",
+    "if   string in pair_hash_map:\n",
+    "    print('s')"
    ]
   }
  ],
